# local-ai-chatbot

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/conversations/: route.ts
app/api/conversations/[id]/: route.ts
app/api/documents/: route.ts
app/api/files/[docId]/: route.ts
app/api/health/: route.ts
app/api/ingest/: route.ts
app/api/search/: route.ts
app/api/title/: route.ts
app/api/warmup/: route.ts
backend/: pyproject.toml  requirements.txt
backend/app/: ai_stream.py  config.py  guardrail.py  main.py  ollama_client.py  store.py
backend/app/rag/: chunk.py  embeddings.py  faiss_store.py  files.py  ingest.py  parse.py  retrieve.py
backend/app/routers/: chat.py  conversations.py  documents.py  files.py  ingest.py  misc.py
backend/tests/: conftest.py  test_ai_stream.py  test_chunk.py  test_config.py  test_faiss_store.py  test_guardrail.py  test_retrieve.py  test_store.py
components/: Brandmark.tsx  ChartView.tsx  Composer.tsx  LockScreen.tsx  Markdown.tsx  MessageBubble.tsx  Sidebar.tsx  SourceViewer.tsx  Sources.tsx
components/ui/: button.tsx
lib/: config.ts  guardrail.ts  history.ts  lock.ts  ollama.ts  router.ts  store.ts  tools.ts  types.ts  utils.ts  voice.ts  websearch.ts
lib/rag/: chunk.ts  embeddings.ts  expand.ts  files.ts  ingest.ts  ocr.ts  parse.ts  rerank.ts  retrieve.ts  vectorstore.ts
