[project]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas local AI chatbot backend (FastAPI + FAISS + Ollama)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "faiss-cpu>=1.9",
    "numpy>=1.26",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.rag", "app.routers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running Ollama instance (skipped by default)",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
